--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,5 +15,9 @@ steps:
         '--platform', 'managed',
         '--allow-unauthenticated'
       ]
+
 images:
   - 'gcr.io/$PROJECT_ID/vibe-connect'
+
+options:
+  logging: CLOUD_LOGGING_ONLY
